# ensimag-skel-exam

./: CMakeLists.txt  README.md
src/: main.c  prodconso.c  prodconso.h
tests/: validateur.c  validite.pl
